# langgraph-voice-agents

./: .env.example  .gitignore  BACKLOG.md  CLAUDE.md  Makefile  PLANNING.md  README.md  TASK.md  main.py  pyproject.toml  requirements.txt  setup.py  test_imports.py  test_structure.py
.claude/: CLAUDE.md  PROJECT_CONTEXT.md  architecture.md  context.md
.claude/commands/: execute-prp.md  generate-prp.md  validate.md
PRPs/templates/: prp_base.md
agents/: __init__.py  code_assistant.py  general_assistant.py  task_checker.py  task_executor.py  task_manager.py  task_orchestrator.py  voice_agent.py
core/: __init__.py  base_graph.py  state_management.py
docs/: API_REFERENCE.md
examples/: README.md  __init__.py  basic_demo.py  voice_demo.py
examples/error_handling/: README.md  error_handling_demo.py
llm/: __init__.py  provider.py  router.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_agents.py  test_workflows.py
tests/unit/: test_agents.py  test_core.py  test_state_management.py  test_tools.py
tests/voice/: __init__.py
tools/: __init__.py  context7_tools.py  desktop_commander_tools.py  sequential_thinking_tools.py  serena_tools.py  shrimp_tools.py  taskmaster_tools.py
voice/: __init__.py  audio_utils.py  cartesia_client.py  livekit_client.py
