[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-voice-agents"
version = "0.1.0"
description = "Voice-enabled multi-agent framework built on LangGraph with LiveKit integration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Scientia Capital", email = "contact@scientiacapital.com"}
]
maintainers = [
    {name = "Scientia Capital", email = "contact@scientiacapital.com"}
]
keywords = [
    "langgraph",
    "voice",
    "agents",
    "ai",
    "livekit",
    "mcp",
    "multi-agent",
    "framework"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "livekit>=0.11.0",
    "openai>=1.0.0",
    "numpy>=1.24.0",
    "websockets>=12.0",
    "sqlalchemy>=2.0.0",
    "redis>=5.0.0",
    "asyncio-mqtt>=0.13.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.8.0",
    "aiofiles>=23.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]
audio = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "webrtcvad>=2.0.10",
]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
]
monitoring = [
    "prometheus-client>=0.17.0",
    "structlog>=23.0.0",
]
all = [
    "langgraph-voice-agents[dev,audio,ml,monitoring]",
]

[project.urls]
Homepage = "https://github.com/ScientiaCapital/langgraph-voice-agents"
Documentation = "https://github.com/ScientiaCapital/langgraph-voice-agents#readme"
Repository = "https://github.com/ScientiaCapital/langgraph-voice-agents"
"Bug Tracker" = "https://github.com/ScientiaCapital/langgraph-voice-agents/issues"

[project.scripts]
langgraph-voice-agents = "cli:main"

[tool.setuptools]
packages = ["core", "agents", "tools", "voice"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "voice: marks tests requiring voice/LiveKit setup",
]

# MyPy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["core", "agents", "tools", "voice"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
